# Rewise

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
core/: extractor.py  rag.py  session_manager.py  summarizer.py  transcriber.py  vectorstore.py
utils/: audio_processor.py
