[project]
name = "video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain-groq>=1.1.3",
    "numpy<2.5",
    "pydub>=0.25.1",
    "tokenizers>=0.22.0,<=0.23.0",
    "yt-dlp>=2026.7.4",
]
